--- a/package.json
+++ b/package.json
@@ -6,8 +6,9 @@
   "author": "Agustin Kassis",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.24.0",
     "dotenv": "^10.0.0",
-    "firebase": "^9.6.1",
+    "firebase-admin": "^10.0.1",
     "twitter": "^1.7.1"
   }
 }
